# spirv-example

./: .gitignore  Cargo.toml  Makefile.toml
src/: main.rs  shader.spv  shader.vert
