[package]
name = "spir-v_example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv_cross = { version="0.23.1", features=["hlsl", "msl", "glsl", "default"] }
rspirv = "0.7.0"
spirv_headers = "1.5.0"
shaderc = "0.7.2"
